# AILab_MacOS

./: .gitignore  QUICKSTART.md  check_prerequisites.sh  check_versions.py  pyproject.toml  readme.md  run_ai_env.sh  setup_python_env.sh  verify_checksums.py  version_config.json
config/: expected_versions.json  install_config.json  metadata.json  version_history.json
help/: 1_ollama_models.txt  2_vscode_usage.txt  3_python_development.txt  4_project_examples.txt  5_manage_ollama.txt  6_environment_management.txt  7_shutdown_procedures.txt  8_useful_tips.txt  codellama_7b.txt  gpt_oss_20b.txt  help_menu.bat  llama2_7b.txt  mistral_7b.txt  phi_2_7b.txt
src/: __init__.py  activate_ai_env.py  ai_action_handlers.py  ai_app_launcher.py  ai_app_launchers.py  ai_component_setup.py  ai_component_tester.py  ai_conda_manager.py  ai_document_viewer.py  ai_environment_validator.py  ai_jupyter_manager.py  ai_launcher_menu.py  ai_menu_system.py  ai_model_downloader.py  ai_model_loader.py  ai_model_manager.py  ai_ollama_manager.py  ai_path_finder.py  ai_path_manager.py  ai_process_manager.py  ai_status_display.py  ai_terminal_launcher.py  ai_update_display.py  ai_update_manager.py  ai_update_utils.py  ai_uv_manager.py  ai_vscode_config.py  ai_vscode_settings.py  ai_vscode_tasks.py  ai_vscode_templates.py  verify_checksums.py
